--- a/create_parquet.ipynb
+++ b/create_parquet.ipynb
@@ -90,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_parquet('from_pandas.parquet',index=False)"
+    "df.to_parquet('/data/new_employee.parquet',index=False)"
    ]
   },
   {
